--- a/lp01.md
+++ b/lp01.md
@@ -1,2 +1,6 @@
 # Larry Plotter y El Bucle Filosofal
-Resumen del libro
+Un día, aparece *Neo*, el de *Matrix*, y le dice que él también puede ser un hacker. 
+
+Así que lo saca de Matrix y se lo lleva a una escuela de hacking.
+
+Allí conoce a sus amigos **ROM** y **Versión** y vive sus primeras aventuras picando código.
