cambios locales en lp06.md

--- a/lp06.md
+++ b/lp06.md
@@ -1,5 +1,4 @@
 # Larry Plotter y el Misterio del Hacker
 
-awsadsadsad
-sadsadsad
-asdsadsad
+Conflicto
+Nullam justo orci, laoreet non elit eu, venenatis fringilla ante. Suspendisse nisi diam, interdum a faucibus ut, tempor quis lacus. Ut ac nisi mi. In sollicitudin vestibulum maximus. Morbi auctor porttitor efficitur. Proin vel elit nisi. Etiam posuere euismod scelerisque. Quisque in sagittis mauris. In hac habitasse platea dictumst. Sed eget scelerisque diam, et dictum nibh. Pellentesque hendrerit dapibus pellentesque. Suspendisse maximus ex ac lorem interdum, id malesuada ex varius. Duis ut hendrerit ligula. Duis accumsan velit id fringilla placerat. Sed suscipit risus dolor, at ultricies tortor eleifend et. Cras non nulla nec justo molestie aliquam.
